--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="password">Password</string>
     <string name="username">Username</string>
     <string name="login">Login</string>
+    <string name="home">Home</string>
+    <string name="all_shows">All Shows</string>
+    <string name="profile">Profile</string>
 </resources>
