--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="password">Password</string>
     <string name="username">Username</string>
     <string name="login">Login</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="test">Test</string>
 </resources>
