--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="home">Home</string>
     <string name="all_shows">All Shows</string>
     <string name="profile">Profile</string>
+    <string name="open_gallery">Open Gallery</string>
+    <string name="take_image">Take Image</string>
+    <string name="logout">Logout</string>
 </resources>
