--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="home">Home</string>
     <string name="all_shows">All Shows</string>
     <string name="profile">Profile</string>
+    <string name="search">Search</string>
 </resources>
