--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="take_image">Take Image</string>
     <string name="logout">Logout</string>
     <string name="search">Search</string>
+    <string name="show_poster_image">Show Poster Image</string>
+    <string name="live_chat">Live Chat</string>
 </resources>
