--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="show_poster_image">Show Poster Image</string>
     <string name="live_chat">Live Chat</string>
     <string name="send">Send</string>
+    <string name="profile_me">My Profile Pic</string>
+    <string name="profile_other">Other profile pic</string>
+    <string name="self_live_message">Your outgoing message here</string>
 </resources>
