--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="unfollow">Unfollow</string>
     <string name="follow">Follow</string>
     <string name="add_show">Add Show</string>
+    <string name="search_shows">Add New Show</string>
 </resources>
